# usb-midi-rs

./: .gitmodules  Cargo.toml  rustfmt.toml
app/src/: main.rs  usb_midi.rs
cross/: Cargo.toml  rust-toolchain.toml
cross/.cargo/: config.toml
cross/app/: Cargo.toml
cross/app/src/: main.rs  usb_midi.rs
src/: lib.rs  main.rs  usb_midi.rs
usb-midi-rs/: Cargo.toml
workspace/: Cargo.toml
workspace/app/: Cargo.toml
