[package]
edition = "2021"
name = "app"
version = "0.1.0"
license = "Proprietary"

[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"
nom = { version = "7.1.3", default-features = false }

[dependencies.embassy-usb]
version = "0.1.0"
path = "../../embassy/embassy-usb"
features = ["defmt"]

[dependencies.embassy-time]
version = "0.1.0"
path = "../../embassy/embassy-time"
features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"]

[dependencies.embassy-executor]
version = "0.1.0"
path = "../../embassy/embassy-executor"
features = ["defmt", "integrated-timers"]

[dependencies.embassy-sync]
version = "0.1.0"
path = "../../embassy/embassy-sync"
features = ["defmt"]

[dependencies.embassy-stm32]
version = "0.1.0"
path = "../../embassy/embassy-stm32"
features = ["nightly", "unstable-traits", "stm32f439zi", "unstable-pac", "memory-x", "time-driver-any", "exti"]
